--- a/livingdigitalmedia/conclusion.html
+++ b/livingdigitalmedia/conclusion.html
@@ -44,7 +44,7 @@ This web project is based on the template "Massively" by HTML5 UP.
 							<li><a href="#">Brief Overview of the Book</a></li>
         <li><a href="introduction.html">Introduction: Rhetorical-Affective Practices in the Now</a></li>
                             <li><a href="introduction-parttwo.html"> Introduction, Part Two: Affective Terms and Felt Conditions</a></li>
-							<li><a href="chapterone.html">Chapter One: Living Webtexts: Collaboration, Feedback, Delivery</a></li>
+							<li><a href="chapterone.html">Chapter One: Living Webtexts: Collaboration, Revision, Delivery</a></li>
                             <li><a href="chapterone-ephemera.html">Ephemera: Chapter One</a></li>
                             <li><a href="chaptertwo.html">Chapter Two: Living Collaboration: Stories of Emplaced and Remote Bodies</a></li>
                             <li><a href="chaptertwo-ephemera.html">Ephemera: Chapter Two</a></li>
@@ -172,11 +172,10 @@ exchanging ideas and sharing." </td>
 
                                 </div>                                                
                                       --> 
-<div class="col-6 col-12-small">
+<div class="col-8 col-12-small">
     
 <section id="introduction" class="section scrollspy"> 
-<p>[Video abstract in the opening]</p>
-<p>[Video transcript]</p>
+<br>
 <p>This book came together in many places and through my modes. At my office at York University, at coffee shops in midtown and the suburbs of the Toronto area. On a subway train. During many hours at home, in a notebook when I could manage it while my son was finishing online kindergarten. Composing a digital project is always an emplaced endeavour and rarely without feelings that bubble up, pop, and drift away. The mist of emotion, as Lulu Miller (2015) once put it, is something that surrounds and saturates writing and rhetorical practices, whether we are composing alone or collaboratively with fellow creators. A theory of rhetorical-affective practices underscores the aforementioned idea, stressing that feelings flow between practices bodies as they (unfold) over months and years—or from invention to delivery and beyond. Through stories, in other words, this book stresses that feelings and bodies of practice are porous and circulatory. As I close this book, then, I also want to acknowledge that a theory of rhetorical-affective practices is also porous, with gaps that future scholars might address and/or choose to fill. More simply, these gaps are limitations, which I discuss here and frame under feedback, collaboration, and delivery.</p>
 <p>This book has fleshed out a theory of rhetorical-affective practices that animate forms of interpersonal circulation in a production cycle. In the main chapters of <cite>Living Digital Media</cite>, creators speak at length about feelings in relation to collaboration, revision, and delivery, practices that cross physical and digital spaces. Entwining stories of webtexts and game development is a means to shedding light on the common ground and productive differences between two fields of creators. Each chapter ends with conclusions and recommendations for writing studies, and each also includes ephemera about my own practices and feelings. Many practices. Many feelings. Many forms of circulation before Circulation––the circulation that is effable yet often rendered to the background.</p>
 <p>At this point of <cite>Living Digital Media</cite>, I turn to future possibilities for deepening and complicating a theory of rhetorical-affective practices. Such a theory is not definitive. It’s invitational, like much the work I put forward in our field.  With this acknowledgement in mind, I focus here on the limitations of this current project. Because this project underscores rhetorical-affective practices relationships that animate interpersonal circulation, humans are the focal point.</p>
@@ -186,8 +185,9 @@ exchanging ideas and sharing." </td>
 <h3>Collaboration in Situ</h3>
 <p>Chapter Two’s stories raise future questions about myriad collaborative arrangements between creators. What does webtext and games development feel like in real time? The stories of this chapter are retrospectives on recently published work. In part due to the pandemic, I simply couldn’t travel to conduct research among and alongside game developers. Developers were situated all over the world, and travel was precarious. As of writing this conclusion, however, pandemic restrictions have been lifted, and travel has been a bit easier.  A closer investigation of collaborative webtexts and/or game development seems in order. I see an opportunity, for example, to revisit Margaret Syverson’s (1994) research method of recording conversations between collaborators over several work sessions, and then drawing conclusions about practices and feelings that stemmed from those sessions. Writing studies and allied fields have developed such methods to study collaborators, but feelings have not been addressed fully. An in-situ study of collaborators could reveal "how data and technologies that seem critical can actually put groups into social peril (p. 379),” as indicated in Nathan Johnson and Meredith Johnson’s (2022) study of affective data technologies at an educational resource company. Imagine what we as scholars could learn if we could study the many work sessions of Tim Lockridge and Derek Van Ittersum’s (2020) Writing Workflows. In what ways did their rhetorical-affective practices overlap and collide as a result of interpersonal circulation? I ask the same about Rivers and Tinnell’s ongoing Mechanical Turks, a collaborative project that is on public display yet documented retrospectively.</p>
 <p>Following my own reflections about the limitations of <cite>Living Digital Media</cite>, I note here that a colleague and I, as of Spring 2022, have begun writing collaboratively in virtual reality to explore the affordances and challenges of the virtual for writers. As we do this project, we are recording each session and occasionally streaming our work on Twitch—in essence, inviting publics and fellow writers to discover what goes on in our colllaborative space.  The following video features an excerpt from a 2022 session, in which our ideas for an essay are interrupted by faulty controllers and user (read: Rich’s) typos, thanks to a lack of a keyboard.</p>
-<p>[Insert video]</p>
-<p>[Transcript embedded]</p>
+<figure>ADD IMAGE
+<figcaption>CAPTION</figcaption>
+</figure>
 <p>If anything the aforementioned except demonstrates the potential for writers and researchers to document their collaborations in real time. Let me say it more plainly: With many accessible digital tools at our disposal, let’s do a better job accounting for our crucial collaborations. We can write about these retrospectively, but we can document them in the present moment. These efforts can support future authors curious about collabrations and the feelings that persist through interpersonal circulation.</p>
     </section>
     <section id="reviewer" class="section scrollspy"> 
@@ -198,8 +198,9 @@ exchanging ideas and sharing." </td>
         <section id="writers" class="section scrollspy"> 
 <h3>More voices: Stories of Writers and Numerous Content Creators</h3>
 <p>My decision to focus on scholars and game developers means I’m eliding numerous areas of digital media production. Elsewhere, I have written, co-authored, and edited work on digital comics creators (Shivener, 2019; Bahl and Shivener, 2020; Bahl, Figueiredo &amp; Shivener, 2020). Digital comics creation is another rich area of study as well as a robust content area for streamers Twitch and YouTube. But for the field of writing studies, I recommend that future scholarship turns to writers who stream regularly on these platforms. How do writers across genres and modes feel about streaming? In Chapter Three, this book answers this question in relation to game developers, but there are numerous streams, including myself, who stream and write under categories such as "Writers” on Twitch and "AuthorTube” on YouTube. In fact, in June 2022, I was invited to participate in WritersCONduit, a free series of panels and talks by writers who livestream on Twitch. Streamers such as WriterGreg, WoeNellyMedia, and SailingOcelot presented on topics such as writing springs, tools, and visual novels, respectively (WritersCONduit, "Welcome to the Writers CONduit 2022 schedule,” 2022). For me, this event was special because it helped me connect with writers who have much more experience on this platform. The following video features an excerpt from my stream, "Valuing Slow Writing,” held on June 26, 2022 during the convention.</p>
-<p>[Video]</p>
-<p>[Video transcript]</p>
+<figure>ADD IMAGE
+<figcaption>From stream.</figcaption>
+</figure>
 <p>The rhetorical-affective practices of writers who stream remains an open research inquiry ready to be explored. And as I’ve noted in this book and elsewhere, Twitch is a dream for writing studies because participants on the platform place their work on public display. It’s an expectation of the community. Our field might have an appetite for this research because we’re already practicing in this community—and I’m not talking about myself! Writing studies scholars who run the WikiProject Writing initative are livestreaming their editing practices on Twitch.  In July 2022, the initative’s Twitch channel had less than 20 followers, but their willingness to display how editing works—for and by our field—ought to be celebrated as a public service. The same goes for Twitch livestreamers such as the Council on Play and Games Studies and ScholarsPlay, channels that apply scholarly lenses to games through play. Participating in or studying these kinds of channels might address the new normal of co-working. It’s as if Twitch is the new coffeeshop for writers.</p>
 </section>
  <section id="final" class="section scrollspy">   
@@ -208,15 +209,13 @@ exchanging ideas and sharing." </td>
 <blockquote>
 One of the driving factors in why I like this kind of work and why I want to encourage others to do it and make space for others to do it: Because it feels really good when you solve a problem and you make this thing that reflects how you’re thinking about the mediated potential of the message. And that to me is just tremendously satisfying. (Lane)
 </blockquote>
-<blockquote>
-Some of the time will not be well spent, in the sense that you’ll go down a whole path that ends up being closed to you, that you realize, "Oh, that’s not the way I want to do it.” Even that time is well spent in that you couldn’t have gotten to your eventual conclusion without it. We get dead ends in our research all the time. We just don’t think those are going to show up in the form of our scholarship. (Helms)</blockquote>	
 <blockquote>Most of the time revisions are what I despise the most out of a publication process. It’s just the hardest thing to do, but I felt like in many ways this [digital media project] wasn’t that challenging, and I think it was because like I could bounce ideas off [my co-author] and she could bounce ideas off me. I think our plan really meshed and worked out in the end. (Eric)
 </blockquote>
 <p>I still fear and tremble when I edit and compose webtexts, but now I know dwelling in those feelings are commonplace as practices circulate between creators and audiences. They might be barriers to a final draft, but they might also reveal turns and gateways to supportive peers, mentors, tools, and good feelings.</p>
 							</section>
 
 </div>
-										<div class="col-6 col-12-small">
+										<div class="col-4 col-12-small">
                                          <br>                                                                
                                         <div class="sticky" id="sidebar-menu">    
 
