Latest updates for review purposes.
Cheers!

--- a/livingdigitalmedia/index.html
+++ b/livingdigitalmedia/index.html
@@ -55,7 +55,8 @@ This web project is based on the template "Massively" by HTML5 UP.
                             <li><a href="chapterthree-ephemera.html">Ephemera: Chapter Three</a></li>
                             <li><a href="chapterfour.html">Chapter Four: Living Delivery: Stories of Living Digital Media</a></li>
                             <li><a href="chapterfour-ephemera.html">Ephemera: Chapter Four</a></li>
-                            <li><a href="conclusion.html">Conclusion</a></li>		
+                            <li><a href="conclusion.html">Conclusion</a></li>	
+                            <li><a href="references.html">References</a></li>
             
     </ul>
 </div>
@@ -109,9 +110,9 @@ This web project is based on the template "Massively" by HTML5 UP.
 										<h2><a href="#">Navigating <br>This Book</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="media/pexels-cottonbro-studio-6889206.jpg" alt=""  width="508" height="310" /></a>
-									<p>This brief section includes a video on how to navigate the chapters and media in the book. EDITORS and REVIEWERS: I will add this section when the book is finalized.</p>
+									<p>This brief section includes a video on how to navigate the chapters and media in the book. EDITORS and REVIEWERS: I will add this section when the book is finalized. The links above and below do not work.</p>
 									<ul class="actions special">
-										<li><a href="ADD" class="button">Read the Section</a></li>
+										<li><a href="#" class="button">Read the Section</a></li>
 									</ul>
 								</article> 
                                 							<article>
@@ -119,7 +120,7 @@ This web project is based on the template "Massively" by HTML5 UP.
                                         	<span class="date">Introduction</span>
 										<h2><a href="chapterone.html">Rhetorical-Affective Practices in the Now</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="media/pexels-soumil-kumar-735911.jpg"  width="508" height="310"alt="Photo of person typing on computer keyboard" /></a>
+									<a href="introduction.html" class="image fit"><img src="media/pexels-soumil-kumar-735911.jpg"  width="508" height="310"alt="Photo of person typing on computer keyboard" /></a>
 									<p>This chapter discusses the exigencies of Living Digital Media and introduces theories and stories in the book. </p>
 									<ul class="actions special">
 										<li><a href="introduction.html" class="button">Read the Introduction</a><br><br><a href="introduction.html" class="button">Part Two of the Intro</a></li>
@@ -175,7 +176,7 @@ This web project is based on the template "Massively" by HTML5 UP.
 								<article>
 									<header>
 										<span class="date">Conclusion</span>
-										<h2><a href="#">A Living Conclusion</a></h2>
+										<h2><a href="conclusion.html">A Living Conclusion</a></h2>
 									</header>
                                     <a href="#" class="image fit"><img src="media/pexels-mikhail-nilov-7709020.jpg" alt="Person's hand reaching out to a light" width="508" height="310" /></a>
 									<p>This concluding chapter revisits a theory of rhetorical-affective practices, acknowledging its limitations and futures.</p>
