Update  bio section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rik Never - DJ</title>
+    <title>Rich Shivener, Professor</title>
     <style>
         * {
             margin: 0;
@@ -175,40 +175,19 @@
 <body>
     <div class="container">
         <div class="header">
-            <div class="team-label">OUR TEAM /</div>
-            <h1 class="artist-name">RIK NEVER</h1>
+            <div class="team-label">Meet Rich /</div>
+            <h1 class="artist-name">About Me</h1>
             <div class="role">DJ</div>
         </div>
 
 ```
     <div class="bio">
-        <p>Toronto's Rik Never found his way into electronic music through an obsession with how sound moves through bodies and spaces. Growing up surrounded by records and gear, he spent years chasing the feeling he first encountered in the deep, rolling grooves of Dixon's Innervisions releases and the organic warmth of Âme's productions—music that felt alive, that breathed. That curiosity eventually led him to assemble a home studio packed with hardware synthesizers, drum machines, and a four-channel analog mixer, where he could get his hands on the textures he'd been hearing in his head.</p>
+        <p>It's me. Hi.</p>
 
-        <p>His sets draw from that same tactile sensibility: deep house and organic house built on layers that shift and evolve, privileging atmosphere and narrative over peak-time chaos. Rik's sound is shaped by his "After Dark Vaughan" project—electronic soundscapes designed for nature preserves and outdoor spaces, exploring what happens when synthetic and organic blur into one another. When he's not in the studio or behind the decks, he's traveling for international collaborations and digging deeper into the relationship between music, environment, and memory.</p>
+       
     </div>
 
-    <div class="memory-section">
-        <div class="memory-title">Favourite BELLOSOUND memory to date?</div>
-        <div class="memory-text">"A sunset session overlooking the Boyd Conservation Area, watching dancers move between the trees as the low-end rolled across the water—that moment when the music, the place, and the people became one system."</div>
-    </div>
-
-    <div class="social-links">
-        <a href="https://instagram.com/riknever" class="social-icon" aria-label="Instagram">
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
-                <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
-                <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
-            </svg>
-        </a>
-        <a href="mailto:contact@riknever.com" class="social-icon" aria-label="Email">
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
-                <polyline points="22,6 12,13 2,6"></polyline>
-            </svg>
-        </a>
-    </div>
-</div>
-
+ 
 <div class="nav-arrows">
     <div class="arrow">‹</div>
     <div class="arrow">›</div>
