--- a/index.html
+++ b/index.html
@@ -1,198 +1,12 @@
- <!DOCTYPE html>
-
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rich Shivener, Professor</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-```
-    body {
-        background-color: #000;
-        color: #fff;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif;
-        line-height: 1.7;
-        overflow-x: hidden;
-    }
-
-    .container {
-        max-width: 900px;
-        margin: 0 auto;
-        padding: 60px 40px;
-    }
-
-    .header {
-        margin-bottom: 20px;
-    }
-
-    .team-label {
-        font-size: 14px;
-        letter-spacing: 2px;
-        text-transform: uppercase;
-        opacity: 0.7;
-        margin-bottom: 10px;
-    }
-
-    .artist-name {
-        font-size: 48px;
-        font-weight: 300;
-        letter-spacing: 2px;
-        text-transform: uppercase;
-        margin-bottom: 5px;
-    }
-
-    .role {
-        font-size: 18px;
-        letter-spacing: 3px;
-        text-transform: uppercase;
-        opacity: 0.7;
-        margin-bottom: 60px;
-    }
-
-    .bio {
-        font-size: 16px;
-        line-height: 1.8;
-        margin-bottom: 60px;
-        opacity: 0.9;
-    }
-
-    .bio p {
-        margin-bottom: 24px;
-    }
-
-    .memory-section {
-        margin-top: 60px;
-        padding-top: 40px;
-        border-top: 1px solid rgba(255,255,255,0.1);
-    }
-
-    .memory-title {
-        font-size: 16px;
-        font-weight: 500;
-        margin-bottom: 20px;
-    }
-
-    .memory-text {
-        font-size: 16px;
-        font-style: italic;
-        opacity: 0.8;
-        line-height: 1.7;
-    }
-
-    .social-links {
-        margin-top: 60px;
-        display: flex;
-        gap: 20px;
-    }
-
-    .social-icon {
-        width: 50px;
-        height: 50px;
-        border: 1px solid rgba(255,255,255,0.3);
-        border-radius: 50%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        transition: all 0.3s ease;
-        text-decoration: none;
-        color: #fff;
-    }
-
-    .social-icon:hover {
-        border-color: rgba(255,255,255,0.7);
-        transform: scale(1.05);
-    }
-
-    .nav-arrows {
-        position: fixed;
-        top: 50%;
-        right: 40px;
-        transform: translateY(-50%);
-        display: flex;
-        gap: 10px;
-    }
-
-    .arrow {
-        width: 40px;
-        height: 40px;
-        border: 1px solid rgba(255,255,255,0.3);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        cursor: pointer;
-        transition: all 0.3s ease;
-        font-size: 20px;
-    }
-
-    .arrow:hover {
-        border-color: rgba(255,255,255,0.7);
-        background: rgba(255,255,255,0.05);
-    }
-
-    @media (max-width: 768px) {
-        .container {
-            padding: 40px 24px;
-        }
-
-        .artist-name {
-            font-size: 36px;
-        }
-
-        .nav-arrows {
-            display: none;
-        }
-
-        .bio {
-            font-size: 15px;
-        }
-    }
-
-    /* Subtle fade-in animation */
-    @keyframes fadeIn {
-        from {
-            opacity: 0;
-            transform: translateY(20px);
-        }
-        to {
-            opacity: 1;
-            transform: translateY(0);
-        }
-    }
-
-    .container {
-        animation: fadeIn 1s ease-out;
-    }
-</style>
-```
-
+<title>Page Title</title>
 </head>
 <body>
-    <div class="container">
-        <div class="header">
-            <div class="team-label">Meet Rich /</div>
-            <h1 class="artist-name">About Me</h1>
-            <div class="role">DJ</div>
-        </div>
 
-```
-    <div class="bio">
-        <p>It's me. Hi.</p>
-
-       
-    </div>
-
- 
-<div class="nav-arrows">
-    <div class="arrow">‹</div>
-    <div class="arrow">›</div>
-</div>
-```
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
 
 </body>
 </html>
